# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  30 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/emerge: Added python 2.2
  compatibility fix. (#62128) Added fix to fail nicely on missing
  /etc/gentoo-release. (#62149)

  30 Aug 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Fixed two
  bugs in bindbapi.aux_get() preventing retrieval of information about tbz2s.

  26 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/etc-update: minor 
  tweak to etc-update to support single quotes in /etc/etc-update.conf
  bug (#56785).  Added Mamoru Komachi (usata)'s fix for osx (#60721).

  26 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py, 
  pym/portage_exec.py, bin/ebuild.sh: Removed the PORT_LOGDIR $0 $* | tee 
  hack, and re-implemented it using spawn.  Spawn has been extended so that 
  fd_pipes can receive a dict of fd # -> fd, and optionally be nonblocking 
  via returnpid.  portage.spawn has support for a logfile optional arg- if 
  specified, spawn logs stdout/stderr via tee -i -a to the specified file.
  Note portage_exec.spawn doesn't currently support this option.

  25 Aug 2004; <genone@gentoo.org> pym/portage.py, +pym/portage_checksum.py, 
  pym/portage_gpg.py, -pym/portage_md5.py:
  renamed portage_md5 to portage_checksum which includes support for sha1.

  24 Aug 2004; Brian Harring <ferringb@gentoo.ogr> bin/ebuild.sh: Tweak to
  dyn_test to check if $S exists prior to cd'ing to it.

  24 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: Fixed a 
  traceback issues in dblink.treewalk when collision-protect is active.  
  Also added specific check/complaint for PORT_LOGDIR='' to the config class,